[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*", "scvi_colab/__init__.py"]

[tool.poetry]
authors = ["The scvi-tools development team <adamgayoso@berkeley.edu>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Lightweight helper to install scvi-tools in Google Colab."
documentation = "https://scvi-tools.org"
homepage = "https://github.com/scverse/scvi-colab"
license = "BSD-3-Clause"
name = "scvi-colab"
packages = [
  {include = "scvi_colab"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
rich = "*"
importlib-metadata = {version = ">=1.0", python = "<3.8"}
black = {version = ">=22.1", optional = true}
codecov = {version = ">=2.0.8", optional = true}
flake8 = {version = ">=3.7.7", optional = true}
isort = {version = ">=5.7", optional = true}
pre-commit = {version = ">=2.7.1", optional = true}
pytest = {version = ">=4.4", optional = true}
python = ">=3.7,<4.0"


[tool.poetry.extras]
dev = ["black", "pytest", "flake8", "codecov", "pre-commit", "isort"]


[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.0",
  "setuptools", # keep it here or "pip install -e" would fail
]
